# gps-to-mqtt

./: Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.yml  example.settings.conf  example.settings.toml  gps-to-mqtt.service  install.sh
.cargo/: config.toml
scripts/: build_packages.sh
src/: config.rs  gps_data_parser.rs  logging.rs  main.rs  metrics.rs  models.rs  mqtt.rs  mqtt_handler.rs  parser.rs  serial.rs  serial_port_handler.rs  service.rs  tcp.rs  telemetry.rs  track.rs
src/ui/: mod.rs  widgets.rs
