[package]
name = "gps-to-mqtt"
version = "0.5.1"
edition = "2024"
authors = ["askrejans"]
description = "GPS to MQTT bridge"
license = "MIT"
repository = "https://github.com/askrejans/gps-to-mqtt"

[dependencies]
# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
futures-util = "0.3.32"

# Serial port
serialport = "4.8.1"

# Configuration
config = "0.15"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"

# CLI
gumdrop = "0.8"

# TTY detection
atty = "0.2"

# MQTT (async client)
rumqttc = "0.25.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# TUI
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Data structures
chrono = "0.4.44"

# XML parsing (for GPX files)
quick-xml = "0.39.2"

# Prometheus metrics + HTTP server
prometheus = "0.14.0"
axum = "0.8"

[dev-dependencies]
serde_json = "1.0.149"
